[gd_scene load_steps=2 format=2]

[ext_resource path="res://DialogManager/Editor/Commands/SayControl.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="NameLabel" type="Label" parent="VBoxContainer/NameHBoxContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
text = "Name : "

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/NameHBoxContainer"]
margin_left = 64.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SayHBoxContainer" type="HBoxContainer" parent="VBoxContainer/VSplitContainer"]
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="SayLabel" type="Label" parent="VBoxContainer/VSplitContainer/SayHBoxContainer"]
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 0 )
size_flags_vertical = 1
text = "Say Text"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/VSplitContainer/SayHBoxContainer"]
margin_left = 64.0
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 572.0

[node name="PortraitHBoxContainer" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="PortraitLabel" type="Label" parent="VBoxContainer/VSplitContainer/VBoxContainer/PortraitHBoxContainer"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 17.0
rect_min_size = Vector2( 60, 0 )
text = "Portrait :"

[node name="PortraitMenuButton" type="MenuButton" parent="VBoxContainer/VSplitContainer/VBoxContainer/PortraitHBoxContainer"]
margin_left = 64.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="PortraitPositionHBoxContainer" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 55.0

[node name="PortraitPositionLabel" type="Label" parent="VBoxContainer/VSplitContainer/VBoxContainer/PortraitPositionHBoxContainer"]
margin_right = 60.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )
text = "Portrait 
Position :"

[node name="PortraitPositionMenuButton" type="MenuButton" parent="VBoxContainer/VSplitContainer/VBoxContainer/PortraitPositionHBoxContainer"]
margin_left = 64.0
margin_right = 1024.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Choose a Posititon"
items = [ "Left", null, 0, false, false, 0, 0, null, "", false, "right", null, 0, false, false, 1, 0, null, "", false, "center", null, 0, false, false, 2, 0, null, "", false ]

[connection signal="text_changed" from="VBoxContainer/VSplitContainer/SayHBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
